--- a/templates/500.html
+++ b/templates/500.html
@@ -3,5 +3,5 @@
     <h1>
         500 Internal Server Error
     </h1>
-    <p>Try Again...</p>
+    <p>Something went wrong.. It's not you, it's us.</p>
 </center>
