--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,12 @@
     {% block more_css %}
     {% endblock %}
 
+    <!-- Google Fonts -->
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <!-- Navbar -->
