--- a/templates/index.html
+++ b/templates/index.html
@@ -7,15 +7,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+
+    {% block more_css %}
+        <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
+    {% endblock %}
 </head>
 <body>
 
 {% block content %}
-
-        <h1>Hello {{name}}!</h1>
-        
-        <a href="{{ url_for('login') }}">Login Page</a>
-
+    <div class="my_container bg-body-secondary">
+        <h1>Welcome to Flasker</h1>
+        <h3>A one stop solution to all your Utility Bills</h3>
+    </div>
 {% endblock %}
 
 </body>
