Added a Utility bill payment page

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 
 {% block content %}
     <div class="my_container bg-body-secondary">
-        <h1>Welcome to Flasker</h1>
+        <h1>Welcome to A4</h1>
         <h3>A one stop solution to all your Utility Bills</h3>
     </div>
 {% endblock %}
