--- a/static/base.css
+++ b/static/base.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 } */
 
+ul, li{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
 html, body { height: 100%; }
 
 :root {
