--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-secondary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{{ url_for('index') }}">Flasker</a>
+        <a class="navbar-brand" href="{{ url_for('index') }}">A4</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
