Added a new user registration page

--- a/templates/login.html
+++ b/templates/login.html
@@ -62,7 +62,7 @@
         <!-- New User -->
         <div class="register">
             <p>Not Registered?</p>
-            <a href="#">SIGN UP</a>
+            <a href="{{ url_for('register') }}">SIGN UP</a>
         </div>
 
     </div>
