--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,6 +13,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('login') }}">Login</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+                </li>
             </ul>
 
             <form class="d-flex" role="search">
